--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -5,7 +5,7 @@
 
 
 
-<!-- {% block content %}
+{% block content %}
 <div class="container">
 	<div class="row">
 		<div class="jumbotron">
@@ -28,4 +28,4 @@
 </div>
 	
 	
-{% endblock %} -->
+{% endblock %}
