creates index template which displays authenticated writer

--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -11,14 +11,14 @@
 		<div class="jumbotron">
 				{{wtf.quick_form(form)}}
 		<ul style="list-style: none;">
-				{% for pitch in pitches %}
+				{% for blog in blogs %}
 					<div class="list-group">
 						<a href="#">
 							<div class="list-item">
-								<p>{{pitch.id}}</p>
+								<p>{{blog.id}}</p>
 							</div>
-							<h4>{{ pitch.description }}</h4>
-							<h6> Posted by {{user_id.username}}.</h6>
+							<h4>{{ blog.description }}</h4>
+							<h6> Written by {{user_id.username}}.</h6>
 						</a>
 					</div>
 				{% endfor %}
