--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,9 +7,6 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <!-- <ul>
-            <a  class="navbar-brand  text-success" href="/pitches/new/"> ADD NEW PITCH </a>
-            </ul> -->
         </div>
         <div class="navbar-nav"></div>
         <div class="navbar-nav">
@@ -44,12 +41,13 @@
       
     </div>
 </div>
+
 <hr>
 <div class="row">
   <div class="col-md-3 text-center">   
-    <a  class="navbar-brand  text-success " href="/pitches/new/" style="color:green;" > ADD NEW PITCH <span style="color:green; font-weight:700px;font-size:30px">+</span></a> 
+    <a  class="navbar-brand  text-success " href="/blogs/new/" style="color:green;"> ADD NEW BLOG <span style="color:green; font-weight:700px;font-size:30px">+</span></a> 
   </div>
   <div class="col-md-9"></div>
   
 </div> 
-<hr> 
+<hr>
