--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% import 'bootstrap/wtf.html' as wtf %} 
 {% block content %}
 <div class="container">
 <div class="row">
@@ -19,7 +19,7 @@
   <div class="col-md-4">
 
     {% if user.profile_pic_path %}
-    <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail">
+    <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail" height="400px" width="400px">
     {%else%}
     <p>No profile picture</p>
     {% endif %}
@@ -31,6 +31,7 @@
         </form> 
     {% endif %}
   </div>
+  <div class="col-md-4"></div>
 </div>
 </div>
 {% endblock %}
