--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -23,7 +23,21 @@
         <button class="nav-link btn btn-info" data-toggle="tab" href="#politicalblog">Politics</button>
       </li>
       
-    </ul>
+    </ul> 
+
+    <hr>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
+          <div class="card bg-info text-center" style="border-radius: 5px;">
+              <div class="card-header" style="color:green">Quotes of the day</div>
+              <div class="card-body">{{quotes.quote}}</div>
+              <div class="card-footer" style="color:green">{{quotes.author}}</div>
+          </div>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    <hr>  
 
     <div class="tab-content">   
       <div id="technologyblog" class="container tab-pane active"><br>
