--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -45,7 +45,8 @@
 <hr>
 <div class="row">
   <div class="col-md-3 text-center">   
-    <a  class="navbar-brand  text-success " href="/blogs/new/" style="color:green;"> ADD NEW BLOG <span style="color:green; font-weight:700px;font-size:30px">+</span></a> 
+    <a  class="navbar-brand  text-success " href="/blogs/new/" class="btn btn-info btn-lg">ADD NEW BLOG<span class="glyphicon glyphicon-plus"></span></a> 
+    
   </div>
   <div class="col-md-9"></div>
   
