--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,11 +29,13 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
+          <div class="text-center "><h3>Random Quotes</h3></div>
           <div class="card bg-info text-center" style="border-radius: 5px;">
               <div class="card-header" style="color:green">Quotes of the day</div>
               <div class="card-body">{{quotes.quote}}</div>
               <div class="card-footer" style="color:green">{{quotes.author}}</div>
           </div>
+          
       </div>
       <div class="col-md-2"></div>
     </div>
